<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_rules_and_instructions"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textViewGameRulesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_rules_title"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textViewGameRule1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_rule_1"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/textViewGameRule1Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_rule_1_description"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"/>

<TextView
        android:id="@+id/textViewGameRule2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_rule_2"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/textViewGameRule2Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_rule_2_description"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textViewGameRule2Example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_rule_2_example"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textViewGameRule2ExampleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_rule_2_example_description"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textViewGameplayInstructionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameplay_instructions_title"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textViewGameplayInstruction1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameplay_instruction_1"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/textViewGameplayInstruction1Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameplay_instruction_1_description"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textViewGameplayInstruction2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameplay_instruction_2"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/textViewGameplayInstruction2Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameplay_instruction_2_description"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textViewGameplayInstruction3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameplay_instruction_3"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/textViewGameplayInstruction3Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameplay_instruction_3_description"
        android:textSize="15sp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textViewToastMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast_message"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textViewGameplayInstruction4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameplay_instruction_4"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/textViewGameplayInstruction4Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast_message_description"
        android:textSize="15sp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/buttonBackToGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:padding="8sp"
        android:text="@string/back_to_game_button"
        android:textSize="18sp" />
</LinearLayout>

